2003-08-25  David Ayers  <d.ayers@inode.at>

	* *.h/m: Updated to new header layout.
	
2003-07-11  David Ayers  <d.ayers@inode.at>

	* INSTALL: Update prerequisits and installation guidelines.
	* GSWeb.framework/GSWApplication.m: Fix compile with debug=no.
	* GSWeb.framework/GSWeb.h: Include GNUstep.h if GNUSTEP is not
	defined for OS X.
	* GSWExtensions.framework/GSWExtWOCompatibility.h: Ditto.
	* GSWExtensionsGSW.framework/GSWExtGSWWOCompatibility.h: Ditto.
	* Examples/hello/*.m: Ditto.

2003-06-26   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWDisplayGroup.h:
		o include EODeprecated.h instead of EOUndoManager.h

2003-06-25   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWHTTPHeaders.h/.m:
		o added g_szHeader_GSWeb_ApplicationName
	* GSWAdaptors/Apache/mod_gsweb.c:
		o added application name header
	* GSWeb.framework/GSWUtils.m:
		o log every 10 lock tries
	* GSWeb.framework/GSWDefaultAdaptorThread.m:
		o log remote address
	* GSWeb.framework/GSWConstants.h/.m: 
		o added GSWClassName_DefaultContext
		o added GSWOPT_Context
		o added GSWHTTPHeader_ApplicationName
	* GSWeb.framework/GSWApplication.h/.m:
		o added -setContextClassName:
		o added -contextClassName;
		o added -createContextForRequest:
		o information on component search duration in debug mode
	* GSWeb.framework/GSWComponentRequestHandler.m:
		o call application -createContextForRequest: instead of directGSWContext creation
		o use session -_contextIDMatchingIDsInContext
		o use matchingContextID to restore already generated page
		o fix in -lockedHandleRequest: to pur requestContextID in context
	* GSWeb.framework/GSWDirectAction.m:
		o call application -createContextForRequest: instead of directGSWContext creation
	* GSWeb.framework/GSWContext.m:
		o fix in +contextWithRequest: to use [self alloc]
	* GSWeb.framework/GSWDeployedBundle.m:
		o fix in lockedCachedRelativePathForResourceNamed:inDirectory:forLanguage:
			to really use cache