@@ -1,3 +1,10 @@
+2003-10-21  David Wetzel <dave@turbocat.de>
+        * Include changes for OS X as suggested by Philip Moetteli
+          GSWeb.framework/GSWAssociation.m
+          GSWeb.framework/GSWDefaultAdaptor.m
+          GSWeb.framework/GSWStatisticsStore.m
+          GSWeb.framework/GSWeb.h
+
 2003-08-25  David Ayers  <d.ayers@inode.at>
 
 	* *.h/m: Updated to new header layout.
